# MCP_CP

./: README.md
client/: app.py  app1.py  config.py  pyproject.toml  servers_config.json
client/.streamlit/: config.toml  style.css
client/apps/: mcp_ui.py
client/services/: chat_service.py  mcp_service.py
client/ui_components/: main_components.py  sidebar_components.py
client/utils/: ai_prompts.py  async_helpers.py
servers/csv_server/: Dockerfile  demo.py  main.py  pyproject.toml  requirements.txt
servers/csv_server/tools/: prompts.py  server.py
