[project]
name = "client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-anthropic>=0.3.13",
    "langchain-aws>=0.2.23",
    "langchain-google-genai>=2.1.4",
    "langchain-mcp-adapters==0.0.7",
    "langchain-openai>=0.3.18",
    "langgraph>=0.4.7",
    "nest-asyncio>=1.6.0",
    "streamlit-aggrid==0.3.4.post3",
    "streamlit-option-menu>=0.4.0",
    "streamlit>=1.45.1",
]
